# doido

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: audit.toml
docs/: 04-view.md  06-cli.md  06b-generators.md  09-jobs.md  10-cache.md  (+1 more)
doido/: Cargo.toml
doido-cable/: Cargo.toml
doido-cable/macros/: Cargo.toml
doido-cable/src/: cable.rs  channel.rs  lib.rs  protocol.rs  pubsub.rs
doido-cable/tests/: cable_test.rs  cable_test_unit.rs  channel_test.rs  protocol_test.rs  pubsub_test.rs
doido-cache/: Cargo.toml
doido-cache/src/: config.rs  environment.rs  global.rs  lib.rs  memcache_store.rs  memory.rs  namespaced.rs  redis_store.rs  registry.rs  store.rs
doido-cache/tests/: arc_store_test.rs  cache_test.rs  config_test.rs  global_init_test.rs  global_test.rs  memory_test.rs  namespaced_test.rs  registry_test.rs  store_test.rs
doido-cli/: Cargo.toml
doido-cli/app/controllers/: posts_controller.rs
doido-cli/src/: lib.rs  main.rs
doido-cli/src/commands/: credentials.rs  db.rs  generate.rs  jobs.rs  mod.rs  new.rs
doido-cli/src/controllers/: posts_controller.rs
doido-cli/tests/: cli_new_test.rs  cli_test.rs
doido-config/: Cargo.toml
doido-config/src/: crypto.rs  env_override.rs  lib.rs  loader.rs  types.rs
doido-config/tests/: config_test.rs  crypto_test.rs  env_override_test.rs  loader_test.rs  types_test.rs
doido-controller/: Cargo.toml
doido-controller/macros/: Cargo.toml
doido-controller/macros/src/: codegen.rs  controller.rs  lib.rs  parser.rs
doido-controller/src/: config.rs  context.rs  environment.rs  lib.rs  logging.rs  route_table.rs  server.rs  stack.rs
doido-controller/tests/: config_test.rs  controller_test.rs  middleware_test.rs  render_test.rs  route_table_test.rs  router_test.rs  session_test.rs  stack_test.rs
doido-core/: Cargo.toml
doido-core/src/: lib.rs  logger.rs  trace.rs
doido-core/src/inflector/: config.rs  inflections.rs  mod.rs  rules.rs
doido-core/tests/: error_test.rs  inflection_config_test.rs  inflections_test.rs  logger_test.rs
doido-generators/: Cargo.toml  build.rs
doido-generators/src/: banner.rs  cli.rs  generator.rs  lib.rs  main.rs  project_generator.rs  registry.rs  templates.rs
doido-generators/src/commands/: console.rs  credentials.rs  db.rs  generate.rs  jobs.rs  mod.rs  new.rs  server.rs  worker.rs
doido-generators/src/generators/: channel.rs  controller.rs  field.rs  generator_gen.rs  job.rs  mailer.rs  migration.rs  mod.rs  model.rs  new.rs  scaffold.rs  templates_gen.rs
doido-generators/templates/app/: .gitignore  Cargo.toml
doido-generators/templates/app/app/controllers/: hello_controller.rs  mod.rs
doido-generators/templates/app/config/: application.toml  production.yml  routes.rs  test.yml
doido-generators/templates/app/src/: main.rs
doido-generators/templates/app/tests/: integration_test.rs
doido-generators/templates/channel/: channel.rs.template  channel_test.rs.template
doido-generators/templates/controller/: controller.rs.template  controller_test.rs.template
doido-generators/templates/job/: job.rs.template  job_test.rs.template
doido-generators/templates/mailer/: mailer.rs.template  mailer_test.rs.template
doido-generators/templates/migration/: migration.rs.template  migration_test.rs.template
doido-generators/templates/models/: migration.rs.template  model.rs.template  model_test.rs.template
doido-generators/templates/new/: .gitignore  Cargo.toml.template  README.md
doido-generators/templates/new/app/models/: mod.rs
doido-generators/templates/new/app/views/layouts/: application.html.tera
doido-generators/templates/new/config/: development.yml  inflection.yaml  production.yml  routes.rs  test.yml
doido-generators/templates/new/db/migration/: Cargo.toml.template  README.md
doido-generators/templates/new/db/migration/src/: lib.rs  main.rs
doido-generators/templates/new/src/: main.rs
doido-generators/templates/scaffold/: controller_api.rs.template  controller_html.rs.template  controller_test.rs.template
doido-generators/templates/scaffold/views/: _form.html.tera  edit.html.tera  index.html.tera  new.html.tera  show.html.tera
doido-generators/tests/: cli_new_test.rs  cli_test.rs  generators_test.rs  new_generator_test.rs
doido-jobs/: Cargo.toml
doido-jobs/macros/: Cargo.toml
doido-jobs/macros/src/: lib.rs
doido-jobs/src/: config.rs  context.rs  db.rs  lib.rs  memory.rs  queue.rs  redis.rs  retry.rs  worker.rs
doido-jobs/tests/: config_test.rs  db_test.rs  jobs_test.rs  memory_test.rs  queue_test.rs  redis_test.rs  worker_test.rs
doido-kafka/: Cargo.toml
doido-kafka/macros/: Cargo.toml
doido-kafka/macros/src/: lib.rs
doido-kafka/src/: codec.rs  consumer.rs  lib.rs
doido-kafka/tests/: codec_test.rs  consumer_test.rs  kafka_test.rs
doido-mailer/: Cargo.toml
doido-mailer/macros/: Cargo.toml
doido-mailer/src/: deliverer.rs  lib.rs  mail.rs
doido-mailer/tests/: deliverer_test.rs  mail_test.rs  mailer_test.rs
doido-mcp/: Cargo.toml
doido-mcp/macros/: Cargo.toml
doido-mcp/src/: lib.rs  protocol.rs  registry.rs  server.rs
doido-mcp/tests/: mcp_test.rs  protocol_test.rs  registry_test.rs
doido-middleware/: Cargo.toml
doido-middleware/src/: lib.rs  session.rs  stack.rs
doido-middleware/tests/: middleware_test.rs  session_test.rs  stack_test.rs
doido-model/: Cargo.toml
doido-model/src/: config.rs  create.rs  environment.rs  lib.rs  pool.rs  testing.rs
doido-model/src/migration/: column.rs  foreign_key.rs  index.rs  mod.rs  table.rs
doido-model/tests/: migration_test.rs  model_test.rs  testing_test.rs
doido-router/: Cargo.toml
doido-router/macros/: Cargo.toml
doido-router/macros/src/: lib.rs
doido-router/src/: lib.rs
doido-router/tests/: router_test.rs
doido-view/: Cargo.toml
doido-view/src/: engine.rs  global.rs  lib.rs  renderer.rs  response.rs  tera_engine.rs
doido-view/tests/: engine_test.rs  renderer_test.rs  response_test.rs  tera_engine_test.rs  view_test.rs
doido/src/: lib.rs  main.rs
doido/tests/: binary.rs  lib_exports.rs
(+27 files in other folders)
