[workspace]
resolver = "2"
members = [
    "doido-core",
    "doido-config",
    "doido-controller/macros",
    "doido-controller",
    "doido-router/macros",
    "doido-router",
    "doido-view",
    "doido-model",
    "doido-middleware",
    "doido-cache",
    "doido-jobs/macros",
    "doido-jobs",
    "doido-mailer/macros",
    "doido-mailer",
    "doido-cable/macros",
    "doido-cable",
    "doido-kafka/macros",
    "doido-kafka",
    "doido-mcp/macros",
    "doido-mcp",
    "doido-generators",
    "doido-cli",
    "doido",
]

[workspace.package]
version = "0.0.2-alpha.0"
license = "MIT"

[workspace.dependencies]
# First-party crates: every entry needs `path` *and* `version` so `cargo publish`
# strips `path`, keeps the semver, and resolves from crates.io.
doido = { path = "doido", version = "0.0.2-alpha.0" }
doido-cable = { path = "doido-cable", version = "0.0.2-alpha.0" }
doido-cable-macros = { path = "doido-cable/macros", version = "0.0.2-alpha.0" }
doido-cache = { path = "doido-cache", version = "0.0.2-alpha.0" }
doido-cli = { path = "doido-cli", version = "0.0.2-alpha.0" }
doido-config = { path = "doido-config", version = "0.0.2-alpha.0" }
doido-controller = { path = "doido-controller", version = "0.0.2-alpha.0" }
doido-controller-macros = { path = "doido-controller/macros", version = "0.0.2-alpha.0" }
doido-core = { path = "doido-core", version = "0.0.2-alpha.0" }
doido-generators = { path = "doido-generators", version = "0.0.2-alpha.0" }
doido-jobs = { path = "doido-jobs", version = "0.0.2-alpha.0" }
doido-jobs-macros = { path = "doido-jobs/macros", version = "0.0.2-alpha.0" }
doido-kafka = { path = "doido-kafka", version = "0.0.2-alpha.0" }
doido-kafka-macros = { path = "doido-kafka/macros", version = "0.0.2-alpha.0" }
doido-mailer = { path = "doido-mailer", version = "0.0.2-alpha.0" }
doido-mailer-macros = { path = "doido-mailer/macros", version = "0.0.2-alpha.0" }
doido-mcp = { path = "doido-mcp", version = "0.0.2-alpha.0" }
doido-mcp-macros = { path = "doido-mcp/macros", version = "0.0.2-alpha.0" }
doido-middleware = { path = "doido-middleware", version = "0.0.2-alpha.0" }
doido-model = { path = "doido-model", version = "0.0.2-alpha.0" }
doido-router = { path = "doido-router", version = "0.0.2-alpha.0" }
doido-router-macros = { path = "doido-router/macros", version = "0.0.2-alpha.0" }
doido-view = { path = "doido-view", version = "0.0.2-alpha.0" }

# ORM
sea-orm     = { version = "2.0.0-rc.38", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# Async runtime
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Web
axum        = "0.8"
tower       = { version = "0.5", features = ["util"] }
tower-http  = { version = "0.6", features = ["cors", "trace", "catch-panic"] }
http        = "1"
http-body-util = "0.1"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Proc-macro helpers
syn         = { version = "2", features = ["full"] }
quote       = "1"
proc-macro2 = "1"

# Observability
tracing     = "0.1"

# Utilities
uuid        = { version = "1", features = ["v4"] }
clap        = { version = "4", features = ["derive"] }
chrono      = { version = "0.4", features = ["clock"] }
