[workspace]
resolver = "2"
members = [
    "doido-core",
    "doido-controller/macros",
    "doido-controller",
    "doido-view",
    "doido-model",
    "doido-cache",
    "doido-jobs/macros",
    "doido-jobs",
    "doido-mailer/macros",
    "doido-mailer",
    "doido-cable/macros",
    "doido-cable",
    "doido-generators",
    "doido",
]

[workspace.package]
version = "0.0.6"
license = "MIT"

[workspace.dependencies]
# First-party crates: every entry needs `path` *and* `version` so `cargo publish`
# strips `path`, keeps the semver, and resolves from crates.io.
doido = { path = "doido", version = "0.0.6" }
doido-cable = { path = "doido-cable", version = "0.0.6" }
doido-cable-macros = { path = "doido-cable/macros", version = "0.0.6" }
doido-cache = { path = "doido-cache", version = "0.0.6" }
doido-controller = { path = "doido-controller", version = "0.0.6" }
doido-controller-macros = { path = "doido-controller/macros", version = "0.0.6" }
doido-core = { path = "doido-core", version = "0.0.6" }
doido-generators = { path = "doido-generators", version = "0.0.6" }
doido-jobs = { path = "doido-jobs", version = "0.0.6" }
doido-jobs-macros = { path = "doido-jobs/macros", version = "0.0.6" }
doido-mailer = { path = "doido-mailer", version = "0.0.6" }
doido-mailer-macros = { path = "doido-mailer/macros", version = "0.0.6" }
doido-model = { path = "doido-model", version = "0.0.6" }
doido-view = { path = "doido-view", version = "0.0.6" }

# ORM
sea-orm     = { version = "2.0.0-rc.38", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Async runtime
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Web
axum        = "0.8"
tower       = { version = "0.5", features = ["util"] }
tower-http  = { version = "0.6", features = ["cors", "catch-panic"] }
http        = "1"
http-body-util = "0.1"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Proc-macro helpers
syn         = { version = "2", features = ["full"] }
quote       = "1"
proc-macro2 = "1"

# Observability
tracing     = "0.1"

# Utilities
uuid        = { version = "1", features = ["v4"] }
clap        = { version = "4", features = ["derive"] }
chrono      = { version = "0.4", features = ["clock"] }
redis       = { version = "0.27", features = ["tokio-comp", "aio"] }
figlet-rs   = "0.1"
