[package]
name = "doido-cable"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-cable-macros = { path = "../doido-cable-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
serde_json = "1"
doido-core = { path = "../doido-core" }
