[package]
name = "doido-cable"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-cable-macros = { path = "macros" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
doido-core = { path = "../doido-core" }
