[package]
name = "doido-cable"
description = "Action Cable analogue: channels, broadcasts, Turbo-friendly pub/sub backends for Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-cable-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
doido-core.workspace = true
