[package]
name = "doido-cache"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
doido-core = { path = "../doido-core" }
async-trait.workspace = true
