[package]
name = "doido-cli"
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
name = "doido_cli"
path = "src/lib.rs"

[dependencies]
doido-core = { path = "../doido-core" }
doido-generators = { path = "../doido-generators" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
