[package]
name = "doido-cli"
description = "Unified doido CLI: servers, consoles, migrations, generators, credential helpers."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
name = "doido_cli"
path = "src/lib.rs"

[dependencies]
doido-core.workspace = true
doido-generators.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
