[package]
name = "doido-config"
description = "Layered TOML config, AES-GCM credential encryption, and env overrides for Doido apps."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
serde.workspace = true
toml = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
