[package]
name = "doido-controller"
description = "Action Controller analogue: Axum handlers, Context, JSON responses, filters for Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-controller-macros.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
http.workspace = true
serde_urlencoded = "0.7"

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
tokio.workspace = true
