[package]
name = "doido-controller"
description = "Action Controller + routing for Doido: Axum handlers, Context, JSON responses, filters, and the routes! DSL."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-controller-macros.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
http.workspace = true
serde_urlencoded = "0.7"

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
tokio.workspace = true
