[package]
name = "doido-core"
description = "Core errors (thiserror), anyhow Result, serde, tracing, and regex helpers for the Doido framework."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2"
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
regex = "1"

[dev-dependencies]
tracing-test = "0.2"
