[package]
name = "doido-core"
description = "Core errors (thiserror), anyhow Result, serde, tracing, and regex helpers for the Doido framework."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2"
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde.workspace = true
serde_norway = "0.9"
regex = "1"

[dev-dependencies]
tracing-test = "0.2"
