[package]
name = "doido-generators"
description = "Scaffold generators (models migrations cable MCP kafka) powering the bundled doido-cli commands."
version.workspace = true
license.workspace = true
edition = "2021"
build = "build.rs"

[build-dependencies]
toml = "0.8"

[dependencies]
doido-core.workspace = true
chrono.workspace = true
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
