[package]
name = "doido-jobs"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-jobs-macros = { path = "macros" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
