[package]
name = "doido-jobs"
description = "Background queues (memory/redis/db workers) — Active Job analogue for Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-jobs-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
async-trait.workspace = true
uuid.workspace = true
chrono = { workspace = true, features = ["serde"] }
doido-model = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
default = []
jobs-db = ["dep:doido-model"]
jobs-redis = ["dep:redis"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
doido-model.workspace = true
uuid.workspace = true
