[package]
name = "doido-kafka"
version.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-kafka-macros = { path = "../doido-kafka-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
