[package]
name = "doido-kafka"
description = "Optional Kafka producers/consumers with codecs and job dispatch bridging for Doido apps."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-kafka-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
