[package]
name = "doido-mcp"
version.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-mcp-macros = { path = "../doido-mcp-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
http = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
