[package]
name = "doido-mcp"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-mcp-macros = { path = "macros" }
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
http.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
tokio.workspace = true
