[package]
name = "doido-mcp"
description = "Model Context Protocol server transport (Axum SSE/HTTP), typed MCP clients for AI tooling atop Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-mcp-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
http.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
tokio.workspace = true
