[package]
name = "doido-middleware"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
async-trait.workspace = true
axum.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
serde_json.workspace = true
http.workspace = true

[dev-dependencies]
tokio.workspace = true
http-body-util.workspace = true
tower.workspace = true
