[package]
name = "doido-middleware"
description = "Tower stacks: tracing, panic recovery, CORS, sessions — Rack-style middleware for Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
async-trait.workspace = true
axum.workspace = true
tower = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
serde_json.workspace = true
http.workspace = true

[dev-dependencies]
tokio.workspace = true
http-body-util.workspace = true
tower.workspace = true
