[package]
name = "doido-model"
version.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
