[package]
name = "doido-model"
description = "SeaORM re-exports plus connection pooling and model testing helpers for Doido apps."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
sea-orm.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
