[package]
name = "doido-router"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-router-macros = { path = "../doido-router-macros" }
axum.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
http.workspace = true
tokio.workspace = true
