[package]
name = "doido-router"
description = "Rails-style routing macros and Router builder on Axum for Doido applications."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
doido-router-macros.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
http.workspace = true
tokio.workspace = true
