[package]
name = "doido-view"
description = "Default Tera engine, layouts, partials — Action View style templating for Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
doido-core.workspace = true
tera = "1"
serde_json.workspace = true

[dev-dependencies]
doido-core.workspace = true
tempfile = "3"
