[package]
name = "doido"
version = "0.1.0"
edition = "2021"

[lib]
name = "doido"
path = "src/lib.rs"

[[bin]]
name = "doido"
path = "src/main.rs"

[dependencies]
doido-core      = { path = "../doido-core" }
doido-config    = { path = "../doido-config" }
doido-router    = { path = "../doido-router" }
doido-controller = { path = "../doido-controller" }
doido-model     = { path = "../doido-model" }
doido-view      = { path = "../doido-view" }
doido-middleware = { path = "../doido-middleware" }
doido-cache     = { path = "../doido-cache" }
doido-jobs      = { path = "../doido-jobs" }
doido-mailer    = { path = "../doido-mailer" }
doido-cable     = { path = "../doido-cable" }
doido-kafka     = { path = "../doido-kafka" }
doido-mcp       = { path = "../doido-mcp" }
doido-generators = { path = "../doido-generators" }
doido-cli       = { path = "../doido-cli" }

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
