[package]
name = "doido"
description = "Rails-inspired Axum framework metacrate exporting router, MVC, adapters (SeaORM Kafka MCP)."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
name = "doido"
path = "src/lib.rs"

[[bin]]
name = "doido"
path = "src/main.rs"

[dependencies]
doido-core.workspace = true
doido-config.workspace = true
doido-router.workspace = true
doido-controller.workspace = true
doido-model.workspace = true
doido-view.workspace = true
doido-middleware.workspace = true
doido-cache.workspace = true
doido-jobs.workspace = true
doido-mailer.workspace = true
doido-cable.workspace = true
doido-kafka.workspace = true
doido-mcp.workspace = true
doido-generators.workspace = true
doido-cli.workspace = true

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
