[package]
name = "doido-controller-macros"
description = "Proc-macros for Doido's controller attribute, before_action/after_action filters, and the routes! routing DSL."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
