[package]
name = "doido-kafka-macros"
description = "Declarative Kafka topics and codegen-friendly consumer macros integrated with Doido."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
