[package]
name = "doido-mailer-macros"
description = "Proc-macros defining Doido mailer classes with template hooks and adapters."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
