[package]
name = "doido-mcp-macros"
description = "Declarative MCP tool/resource codegen for embedding assistants inside Doido services."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
