[package]
name = "doido-router-macros"
description = "Proc-macros for Doido's routes! DSL including resources!, verbs, namespaces, and scopes."
version.workspace = true
license.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
